# viterbi-snakes

./: CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt
src/apps/: CMakeLists.txt  optimize_anchors.cpp
src/tests/: CMakeLists.txt  tests_unit_vsnakes.cpp
src/vsnakes/: CMakeLists.txt
src/vsnakes/include/vsnakes/: utils.h  vsnakes.h
src/vsnakes/include/vsnakes/detail/: optimize_anchors.h  optimize_anchors.hpp
src/vsnakes/src/: utils.cpp  vsnakes.cpp
